replace text block with single line string and also list.of with arrays.aslist for Java 8 aws compatibility